Prepare to move to datalevin.core